# zephyr_project

./: README.md  west.yml
app/: CMakeLists.txt  prj.conf  sample.yaml
app/boards/: lemon_iot_lora_rak3172.overlay  seedfic_lora_datalogger.overlay  seedfic_lora_rak3172.overlay
app/include/: adc.h  bsp.h  control_task.h  event_task.h  lorawan.h  modbus_rtu.h  sensor_task.h  shtc3.h
app/src/: adc.c  bsp.c  control_task.c  event_task.c  main.c  modbus_rtu.c  sensor_task.c  shtc3.c
boards/arm/seedfic_lora_datalogger/: Kconfig.board  Kconfig.defconfig  seedfic_lora_datalogger.dts  seedfic_lora_datalogger.yaml
boards/arm/seedfic_lora_rak3172/: Kconfig.board  Kconfig.defconfig  seedfic_lora_rak3172.dts  seedfic_lora_rak3172.yaml
dts/bindings/: gpio-relays.yaml
include/framework/: buffer_pool.h  events.h  msg_ids.h  sys_cfg.h  sys_core.h  sys_msg.h  sys_msg_macros.h  sys_msg_types.h
lib/: CMakeLists.txt  Kconfig
lib/framework/: CMakeLists.txt  Kconfig  buffer_pool.c  buffer_shell.c  sys_cfg.c  sys_core.c  sys_msg.c  sys_shell.c
tests/lib/custom_lib/: testcase.yaml
